# 12_BE_FastAPI

./: .gitignore  asgi.py  conftest.py  pyproject.toml  scratch_12.py  temp.py  test.ps1  test.sh
.github/workflows/: ci.yml
app/: __init__.py
app/apis/v1/: meeting_router.py  participant_date_router.py  participant_router.py
app/configs/: __init__.py  base_config.py  tortoise_cconfig.py  tortoise_config.py
app/dtos/: create_meeting_response.py  create_participant_request.py  create_participant_response.py  frozen_config.py  get_meeting_response.py  turn_on_off_star_participant_date_request.py  update_meeting_request.py
app/service/: meeting_service_mysql.py  participant_date_service_mysql.py  participant_service_mysql.py
app/tests/apis/v1/: test_best_dates_mysql.py  test_meeting_router_mysql.py  test_participant_date_router_mysql.py  test_participant_router_mysql.py
app/tortoise_models/: base_model.py  meeting.py  participant.py  participant_date.py
app/utils/: base62.py  squids.py
locu/: locustfile.py
migrations/models/: 0_20250819175655_init.py  1_20250820235424_update.py  5_20250821221455_None.py
